(GH-234) Fault tolerance for transient exceptions
Added transient exception handling for SqlServer database. This is to
have a better support for Azure SQL Database where transient faults
are expected and happen periodically.

Support for transient fault handling is added in a base DefaultDatabase
class, but the retry strategy implementation is specified in a
concrete database provider (mssql in this case).

Transient faults are handled in following places:
* Transient faults when opening a connection
* Transient faults when running an update script
* Transient faults when dealing with RoundhousE internal tables (via
NHibernate).

Microsoft TransientFaultHandling library was referenced for retry
building blocks. This might look like a dependency that could be
avoided (by just re-implementing necessary bits). It was mainly used to
utilize ReliableSqlConnection class.

As transient faults are much more common for Azure Sql Database than
for MS SQL Server, it might make sense to put retry logic into a
new dedicated Azure specific provider. But having it in a single MSSQL
provider is much more convenient from user perspective (less options to
think about) and it should not worsen experience for existing MSSQL
users.

--- a/product/roundhouse.databases.sqlserver/roundhouse.databases.sqlserver.csproj
+++ b/product/roundhouse.databases.sqlserver/roundhouse.databases.sqlserver.csproj
@@ -75,6 +75,14 @@
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Iesi.Collections.3.3.2.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EnterpriseLibrary.TransientFaultHandling.6.0.1304.0\lib\portable-net45+win+wp8\Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EnterpriseLibrary.TransientFaultHandling.Data.6.0.1304.1\lib\NET45\Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\NHibernate.3.3.2.4000\lib\Net35\NHibernate.dll</HintPath>
@@ -90,6 +98,7 @@
     <Compile Include="..\..\SolutionVersion.cs">
       <Link>Properties\SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="TransientErrorDetectionStrategy.cs" />
     <Compile Include="orm\ScriptsRunErrorMapping.cs" />
     <Compile Include="orm\ScriptsRunMapping.cs" />
     <Compile Include="orm\VersionMapping.cs" />
