Updated MySqlDatabaseConnection string to allow User Variables so SPROC files can be executed. Also, Updated the MySqlDatabase.run_sql so it obeys the Command Timeout passed in on the Command line.

--- a/product/roundhouse.databases.mysql/roundhouse.databases.mysql.csproj
+++ b/product/roundhouse.databases.mysql/roundhouse.databases.mysql.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="MySqlAdoNetProviderResolver.cs" />
     <Compile Include="MySqlDatabase.cs" />
+    <Compile Include="MySqlTokenizer.cs" />
     <Compile Include="orm\ScriptsRunErrorMapping.cs" />
     <Compile Include="orm\ScriptsRunMapping.cs" />
     <Compile Include="orm\VersionMapping.cs" />
