--- a/nuget/roundhouse.lib/roundhouse.lib.nuspec
+++ b/nuget/roundhouse.lib/roundhouse.lib.nuspec
@@ -14,7 +14,7 @@
     <tags>roundhouse db migration database migrator chucknorris</tags>
     <iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
     <dependencies>
-      <dependency id="log4net" version="[1.2.10]" />
+      <dependency id="log4net" version="2.0.0" />
       <dependency id="FluentNHibernate" version="1.3.0.717" />
     </dependencies>
   </metadata>
