--- a/nuget/roundhouse.msbuild/roundhouse.msbuild.nuspec
+++ b/nuget/roundhouse.msbuild/roundhouse.msbuild.nuspec
@@ -14,7 +14,7 @@
     <tags>roundhouse db migration database migrator chucknorris msbuild</tags>
     <iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
     <dependencies>
-      <dependency id="log4net" version="[1.2.10]" />
+      <dependency id="log4net" version="2.0.0" />
     </dependencies>
   </metadata>
 </package>
