(GH-240) Trim version file contents
Added Trim to TextVerisonResolver class where it reads the version to remove any leading or trailing whitespace that may been added to the file.

--- a/product/roundhouse.tests/roundhouse.tests.csproj
+++ b/product/roundhouse.tests/roundhouse.tests.csproj
@@ -123,6 +123,7 @@
     <Compile Include="migrators\DefaultDatabaseMigratorSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="infrastructure\filesystem\DotNetFileSystemAccessSpecs.cs" />
+    <Compile Include="resolvers\TextVersionResolverSpecs.cs" />
     <Compile Include="sqlsplitters\SplitterContext.cs" />
     <Compile Include="sqlsplitters\StatementSplitterSpecs.cs" />
     <Compile Include="TestExtensions.cs" />
