--- a/Settings/UppercuT.config
+++ b/Settings/UppercuT.config
@@ -30,7 +30,7 @@
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
   <!-- test.framework: none, mbunit2, nunit, xunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
-  <property name="test.framework" value="mbunit2" overwrite="false" />
+  <property name="test.framework" value="xunit" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
   
@@ -77,7 +77,7 @@
   <!-- To not use the tool, change to a location that doesn't exist -->
   <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" if="${platform::is-windows()}" />
   <property name="app.nunit.console" value="nunit-console" overwrite="false" if="${platform::is-unix()}"/>
-  <property name="app.xunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}xUnit${path.separator}xunit.console.clr4.exe" overwrite="false" />
+  <property name="app.xunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}xUnit${path.separator}xunit.console.x86.exe" overwrite="false" />
   <property name="app.storevil.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}StorEvil${path.separator}StorEvil.exe" overwrite="false" />
   <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
   <property name="app.ncover_explorer" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCoverExplorer.Console.exe" overwrite="false" />
