--- a/product/roundhouse.tests.integration/packages.config
+++ b/product/roundhouse.tests.integration/packages.config
@@ -4,5 +4,7 @@
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
   <package id="log4net" version="2.0.3" targetFramework="net35" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net35" />
+  <package id="NUnit" version="3.7.1" targetFramework="net45" />
+  <package id="Should" version="1.1.12.0" targetFramework="net45" />
+  <package id="TinySpec.NUnit" version="0.9.5" targetFramework="net45" />
 </packages>
