--- a/product/roundhouse.tests/roundhouse.tests.csproj
+++ b/product/roundhouse.tests/roundhouse.tests.csproj
@@ -106,6 +106,7 @@
       <Link>Properties\SolutionVersion.cs</Link>
     </Compile>
     <Compile Include="databases\SqlServerDatabaseSpecs.cs" />
+    <Compile Include="DummyDatabase.cs" />
     <Compile Include="EmptyTestContainer.cs" />
     <Compile Include="cryptography\CryptographicServiceSpecs.cs" />
     <Compile Include="infrastructure.app\tokens\TokenReplacerSpecs.cs" />
@@ -119,9 +120,11 @@
     <Compile Include="infrastructure\logging\custom\Log4NetLoggerSpecs.cs" />
     <Compile Include="infrastructure\logging\LogSpecs.cs" />
     <Compile Include="migrators\DefaultDatabaseMigratorSpecs.cs" />
+    <Compile Include="MockKnownFolders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="infrastructure\filesystem\DotNetFileSystemAccessSpecs.cs" />
     <Compile Include="resolvers\TextVersionResolverSpecs.cs" />
+    <Compile Include="runners\RoundhouseMigratorRunnerSpecs.cs" />
     <Compile Include="sqlsplitters\SplitterContext.cs" />
     <Compile Include="sqlsplitters\StatementSplitterSpecs.cs" />
     <Compile Include="TestExtensions.cs" />
